<resources>
    <string name="app_name">Panorama</string>
    <string name="top_100_movies">Top 100 Movies</string>
    <string name="rate">rate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_movies">Recent Movies</string>
    <string name="this_week_movies">This week movies</string>
    <string name="top_250_movies">Top 250 Movies</string>
    <string name="watch_now">Watch Now</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_250_tvs_show">Top 250 TVs Show</string>
    <string name="movies_coming_soon">Movies coming soon</string>
    <string name="description">Description:</string>
    <string name="coming_soon_movies">Coming Soon Movies</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_in">SignIn</string>
    <string name="register_account">Register account</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="repassword">RePassword</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered</string>
    <string name="first_name">FirstName:</string>
    <string name="last_name">Lastname:</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age:</string>
    <string name="age_textview">Age</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="signout">SignOut</string>
    <string name="save">Save</string>
    <string name="nickname">Nickname</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="delete">Delete</string>
    <string name="remember_me">Remember me</string>
    <string name="remember_me_toast">Will remember you</string>
    <string name="login_empty_email_toast">You must fill email field</string>
    <string name="welcome_toast">Welcome</string>
    <string name="not_login_toast">You are not login!</string>
    <string name="login_toast">You are logged in</string>
    <string name="login">.login</string>
    <string name="actors">Actors:</string>
    <string name="similar">Similar:</string>
    <string name="delete_account">Delete account</string>
    <string name="Home">Home</string>
    <string name="movies_showing_now">Movies showing now</string>
    <string name="top250_movies">Top 250 movies</string>
    <string name="popular">Popular movies</string>
    <string name="comingsoon">Coming soon</string>
    <string name="top250_series">Top 250 Series</string>
    <string name="thedetails">The details</string>
    <string name="registration">Registration</string>
    <string name="Signin">Signin</string>
    <string name="profile_personal">Profile personal</string>
    <string name="enter_nick_name">Enter nick name</string>
    <string name="succes">Successful update</string>
    <string name="enter_last_name1">Enter last name</string>
    <string name="enter_nickname">Enter your nickname</string>
    <string name="enter_lastname">Enter your lastname</string>
    <string name="image_save">Image saved</string>
    <string name="saved_data">Successfully saved data</string>
    <string name="deleteuser">Your account deleted</string>
    <string name="Complete">Complete</string>
    <string name="fill_field">you must fill all fields</string>
    <string name="password_match">the password didn\'t mache!</string>
    <string name="register_r">Register successful</string>
    <string name="your_profile">Your profile</string>
    <string name="toenter">signin</string>
    <string name="start">Home</string>
    <string name="error_conection">Error Connection</string>
    <string name="dismiss">Dismiss</string>
    <string name="trailer">Trailer:</string>
    <string name="login_empty_password">You must fill password field</string>

</resources>