<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/recent_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/poller_one"
                android:text="@string/this_week_movies"
                android:textColor="#F0000000"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recent_movies_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recent_movies" />

            <ImageView
                android:id="@+id/top250movies_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recent_movies_recyclerView"
                android:src="@drawable/top250"
                tools:ignore="ContentDescription"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poller_one"
                android:text="@string/top_250_movies"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/top250movies_icon"
                app:layout_constraintEnd_toEndOf="@+id/top250movies_icon"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="@+id/top250movies_icon"
                app:layout_constraintTop_toTopOf="@+id/top250movies_icon"
                app:layout_constraintVertical_bias="0.455" />

            <TextView
                android:id="@+id/watch_now_top250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poller_one"
                android:text="@string/watch_now"
                android:textColor="#C61818"
                app:layout_constraintBottom_toBottomOf="@+id/top250movies_icon"
                app:layout_constraintEnd_toEndOf="@+id/top250movies_icon"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toStartOf="@+id/top250movies_icon"
                app:layout_constraintTop_toTopOf="@+id/top250movies_icon"
                app:layout_constraintVertical_bias="0.699" />

            <ImageView
                android:id="@+id/popular_movies_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top250movies_icon"
                android:src="@drawable/popular_movies_background"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poller_one"
                android:text="@string/popular_movies"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/popular_movies_background"
                app:layout_constraintEnd_toEndOf="@+id/popular_movies_background"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="@+id/popular_movies_background"
                app:layout_constraintTop_toTopOf="@+id/popular_movies_background"
                app:layout_constraintVertical_bias="0.414" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poller_one"
                android:text="@string/watch_now"
                android:textColor="#FFA400"
                app:layout_constraintBottom_toBottomOf="@+id/popular_movies_background"
                app:layout_constraintEnd_toEndOf="@+id/popular_movies_background"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toStartOf="@+id/popular_movies_background"
                app:layout_constraintTop_toTopOf="@+id/popular_movies_background"
                app:layout_constraintVertical_bias="0.677" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular_movies_background"
                android:src="@drawable/ic_group_13_svg"
                tools:ignore="ContentDescription"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>